--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Calculator</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <div class="main">
@@ -13,28 +14,28 @@
      </div>
      <div class="buttons">
        <div class="row_one">
-         <span id="1">1</span>
-         <span id="2">2</span>
-         <span id="3">3</span>
-         <span id="+">+</span>
+         <span class="button" id="1">1</span>
+         <span class="button" id="2">2</span>
+         <span class="button" id="3">3</span>
+         <span class="button" id="+">+</span>
        </div>
        <div class="row_two">
-         <span id="4">4</span>
-         <span id="5">5</span>
-         <span id="6">6</span>
-         <span id="-">-</span>
+         <span class="button" id="4">4</span>
+         <span class="button" id="5">5</span>
+         <span class="button" id="6">6</span>
+         <span class="button" id="-">-</span>
        </div>
        <div class="row_three">
-         <span id="7">7</span>
-         <span id="8">8</span>
-         <span id="9">9</span>
-         <span id="*">*</span>
+         <span class="button" id="7">7</span>
+         <span class="button" id="8">8</span>
+         <span class="button" id="9">9</span>
+         <span class="button" id="*">*</span>
        </div>
        <div class="row_four">
-         <span id="clear">c</span>
-         <span id="0">0</span>
-         <span id="/">/</span>
-         <span id="=">=</span>
+         <span class="button" id="clear">c</span>
+         <span class="button" id="0">0</span>
+         <span class="button" id="/">/</span>
+         <span class="button" id="=">=</span>
        </div>
      </div>
    </div>
