Changed id for operator buttons

--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
          <span class="button" id="1">1</span>
          <span class="button" id="2">2</span>
          <span class="button" id="3">3</span>
-         <span class="button" id="+">+</span>
+         <span class="button" id="addtion">+</span>
        </div>
        <div class="row_two">
          <span class="button" id="4">4</span>
          <span class="button" id="5">5</span>
          <span class="button" id="6">6</span>
-         <span class="button" id="-">-</span>
+         <span class="button" id="subtraction">-</span>
        </div>
        <div class="row_three">
          <span class="button" id="7">7</span>
          <span class="button" id="8">8</span>
          <span class="button" id="9">9</span>
-         <span class="button" id="*">*</span>
+         <span class="button" id="multiplication">*</span>
        </div>
        <div class="row_four">
          <span class="button" id="clear">c</span>
          <span class="button" id="0">0</span>
-         <span class="button" id="/">/</span>
-         <span class="button" id="=">=</span>
+         <span class="button" id="division">/</span>
+         <span class="button" id="calculate">=</span>
        </div>
      </div>
    </div>
